<resources>
    <string name="app_name">Simbi</string>
    <string name="action_settings">Settings</string>
    <string name="startup_message">Starting Simbi App</string>
    <!-- User Related stuff -->
    <string name="label_username_or_email">Username or Email</string>
    <string name="label_password">Password</string>
    <string name="label_accept_login">Login</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="label_logout">Logout</string>
    <string name="label_fb_login">Enter with Facebook</string>
    <string name="message_internet_disconnected">Please Check Internet Connectivity</string>
    <string name="message_login_fail">Login Failed..</string>
    <string name="message_enter_user_pass">Please enter username and password</string>
    <string name="message_enter_correct_credentials">Please enter correct username and password</string>
    <!-- Dashboard menus -->
    <string name="ask_a_question">Ask a Question</string>
    <string name="user_pets_profiles">Your Pet\'s Profiles</string>
    <string name="search_vets">Search Vet\'s Profiles</string>
    <string name="find_hospital">Find Hospital</string>
    <string name="emergency_button">Emergency</string>
    <!-- Vet's Profile -->
    <string name="biography">Biography</string>
    <string name="languages">Languages</string>
    <string name="calendar">Calendar</string>
    <string name="add_favorite_vet">Add to Favorites</string>
    <string name="contact_vet">Contact</string>
    <string name="search_doc">Search doctors and clinics...</string>
    <!-- Vet's Search -->
    <string name="filter_experience">Filter by experience</string>
    <string name="filter_fee">Filter by fee</string>
    <string name="filter_likes">Filter by likes</string>
    <string name="title_activity_questions">Forum</string>

    <string name="hello_world">Hello world!</string>

</resources>
