<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/menu_border"
            android:clickable="true">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/ic_paw" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/user_pets_profiles"
                android:textColor="@color/color_gray"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu_border"
            android:clickable="true">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/ic_question" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/ask_a_question"
                android:textColor="@color/color_gray"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu_border"
            android:clickable="true">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/ic_vet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/search_vets"
                android:textColor="@color/color_gray"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu_border"
            android:clickable="true">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/find_hospital"
                android:textColor="@color/color_gray"
                android:textSize="22sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_primary"
            android:clickable="true">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/ic_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/emergency_button"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>