<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="188dp"
            android:layout_height="240dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/kitty"
            android:id="@+id/simbi_logo" />

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_signup_control_bg"
                android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_primary_dark" />

                <!-- Username Input -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@android:drawable/ic_dialog_email"
                        android:tint="@color/body_text_3" />

                    <EditText
                        android:id="@+id/edtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="#ffffff"
                        android:fontFamily="@string/font_light"
                        android:gravity="center_vertical"
                        android:hint="@string/label_username_or_email"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@color/body_text_3" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_primary_dark" />

                <!-- User Password Input -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@android:drawable/ic_lock_lock"
                        android:tint="@color/body_text_3" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="#ffffff"
                        android:fontFamily="@string/font_light"
                        android:gravity="center_vertical"
                        android:hint="@string/label_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@color/body_text_3" />
                </LinearLayout>

                <View
                    android:id="@+id/login_progress"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_primary_dark"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_signup_button"
                android:fontFamily="@string/font_light"
                android:text="@string/label_accept_login"
                android:textColor="#fff" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_with_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@string/font_light"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/label_forgot_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ebebeb" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>