<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/doctor_profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <com.pkmmte.view.CircularImageView
                android:id="@+id/doctor_image_profile"
                android:layout_width="136dp"
                android:layout_height="136dp"
                app:border="true"
                app:shadow="true" />

            <View
                android:id="@+id/doctor_online_profile"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/doctor_image_profile"
                android:layout_alignRight="@+id/doctor_image_profile"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/vet_online" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctor_specialization_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/doctor_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="San Francisco"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="left">

                    <TextView
                        android:id="@+id/doc_experience_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:drawableLeft="@drawable/ic_experience"
                        android:drawablePadding="2dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/rate_by_hour_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:drawableLeft="@drawable/ic_money"
                        android:drawablePadding="2dp"
                        android:text="$200"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/likes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:drawableLeft="@drawable/ic_thumbs_up"
                        android:drawablePadding="2dp"
                        android:text="100k"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_vet_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:id="@+id/layout_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/biography_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_biography"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/ic_expand_right"
                    android:gravity="center_vertical"
                    android:text="@string/biography"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/biography_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="I graduated from university of texas with doctorate in medicine.I love pets and i have 2 cats"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/layout_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/language_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_language"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/ic_expand_right"
                    android:gravity="center_vertical"
                    android:text="@string/languages"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/languages_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="English,French"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/layout_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="20dp"
                    android:drawableRight="@drawable/ic_expand_right"
                    android:gravity="center_vertical"
                    android:text="@string/calendar"
                    android:textSize="18sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/contact_vet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_primary"
            android:drawableLeft="@drawable/ic_contact_vet"
            android:drawablePadding="-30dp"
            android:paddingLeft="20dp"
            android:text="@string/contact_vet"
            android:textColor="@color/color_bg"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>